changes file structure

--- a/OPS100.md
+++ b/OPS100.md
@@ -21,10 +21,10 @@ Course Duration:
 
 ---
 
-[Clear Your Task Bar](#)
-[Install Commonly Used Apps](#)
-[Command Line Basics](#)
-[Git](#)
-[Chrome Developer Tools](#)
-[Other Tools](#)
-[Developers Survey](#)
+1. [Clear Your Task Bar](#)
+2. [Install Commonly Used Apps](#)
+3. [Command Line Basics](#)
+4. [Git](#)
+5. [Chrome Developer Tools](#)
+6. [Other Tools](#)
+7. [Developers Survey](#)
